# working_almosthumanai-

./: Modelfile
apps/client/src/contexts/: WebSocketContext.tsx
apps/server/: Untitled  check_gpu.py  main.py  package.json  pyproject.toml
apps/server/core/: lifespan.py
apps/server/models/: ollama_processor.py  tts_processor.py  whisper_processor.py
apps/server/receptionist/: database.py  models.py  seed_data.py
apps/server/routes/: api_routes.py  websocket_routes.py
apps/server/services/: query_router.py
